syntax = "proto3";
option java_multiple_files = true;
package com.example.systemevents;

message SystemEventRequest {
    enum LogType {
        INFO = 0;
        ERROR = 1;
    }
    LogType logType = 1;
    string serviceName = 2;
    string userEmail = 3;
    enum Action {
        GET = 0;
        POST = 1;
        PUT = 2;
        DELETE = 3;
    }
    Action action = 4;
    string time = 5;
}

message SystemEventResponse {
    string eventId = 1;
}

service SystemEventService {

    rpc register(SystemEventRequest) returns (SystemEventResponse);
}